# rl_ideas

./: .gitignore  main.py  pyproject.toml
scripts/: actor_critic.py  dqn.py  iterative_sft.py  reinforce.py  reinforce_baseline.py  supervised_rl.py
